<resources>
    <string name="app_name">MyIntent</string>
    <string name="dial_number">dial number</string>
    <string name="choose_number">choose number</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="title_activity_move_with_object">Activity_move_with_object</string>
    <string name="move_with_result">move with result</string>
    <string name="result_form_activity">Result Form Activity</string>
</resources>