<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <Button
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="#f79d00"
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pindah Activity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="#f79d00"
        android:id="@+id/btn_move_with_data_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pindah Activity dengan Data"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="#f79d00"
        android:id="@+id/btn_move_activity_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pindah Activity dengan Object"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="#f79d00"
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:background="@drawable/btn_bg"
        android:textColor="#f79d00"
        android:textAllCaps="false"
        android:id="@+id/btn_move_for_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_result"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#f79d00"
        android:text="@string/result_form_activity"
        />
</LinearLayout>